# hera_spice_ws_server

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  install_dependencies.sh
certs/: cert.pem  key.pem
inc/: data_manager.hpp  server_threads.hpp  spice_core.hpp  utils.hpp  websocket_manager.hpp
licenses/cspice/: LICENSE
src/: data_manager.cpp  main.cpp  server_threads.cpp  spice_core.cpp  utils.cpp  websocket_manager.cpp
